<resources>
    <string name="app_name">Era Tactics</string>
    <string name="title_activity_tactics_game">Era Tactics</string>

    <string name="dummy">Dummy Text</string>

    <!--Splash screen-->
    <string name="adventure">Adventure</string>
    <string name="teams">Teams</string>
    <string name="settings">Settings</string>
    <string name="members">Members</string>

    <!--Misc headers-->
    <string name="equipment">Equipment</string>
    <string name="inventory">Inventory</string>
    <string name="skills">Skills</string>
    <string name="tutorial">Tutorial</string>

    <!--Tutorial-->
    <string name="pickAdventurer">1. Pick an adventurer!</string>
    <string name="pickSkill">2. Pick a skill!</string>
    <string name="targetExplanation">Targets within the range of your selected adventurer and skill are circled out as red.</string>
    <string name="pickTarget">3. Pick a target!</string>
    <string name="attackExplanation">Every piece can do an action once. Once everyone has made an action, all pieces will be able to move again.</string>
    <string name="killEnemy">4. Kill all enemies to win!</string>
    <string name="playGame">Play</string>

    <string name="clickEquipment">1. Click an equipment to use its leader skill. Each adventurer can only have one leader skill at a time.</string>
    <string name="longClickEquipment">2. Long click an equipment to bring up the inventory to change it. (Coming soon...)</string>
    <string name="equipmentNote">3. Remember, only equipment of the corresponding type can be equipped. No equipping boots as a helmet! :P</string>

    <string name="chooseAdventurers">1. Pick adventurers</string>
    <string name="adventurerNumberLimit">Choose adventurers from the list to assign it to your team. You may have up to 5 adventurers on each of your teams.</string>
    <string name="changeAdventurer">2.Change adventurers </string>
    <string name="changeAdventurerExplanation">Click on an adventurer to bring up your adventurer list to swap out with another adventurer.</string>
    <string name="positionAdventurer">3. Place adventurers</string>
    <string name="positionAdventurerExplanation">Click and drag an adventurer to the grid to assign their position. You may also change your adventurers\' positions by dragging the ones already on the grid.</string>

    <!--Equipment-->
    <string name="equipmentClassLabel">Equipment Class</string>
    <string name="equipmentSkillLabel">Skill</string>
    <string name="equipmentLeaderSkillLabel">Leader Skill</string>
    <string name="dummySkill">Dummy Skill</string>
    <string name="dummyLeaderSkill">Dummy Leader Skill</string>
    <string name="dummyCharacterName">Dummy</string>
    <string name="equipmentAttack">ATK</string>
    <string name="equipmentDefense">DEF</string>
    <string name="equipmentMagic">MAG</string>
    <string name="equipmentResistence">RES</string>
    <string name="noSkill">No Skill</string>
    <string name="noLeaderSkill">No Leader skill</string>

    <!--Stage selection-->
    <string name="selectStage">Pick a level</string>
    <string name="level">Level </string>
    <string name="clearedLevel">Cleared!</string>
    <string name="newLevel">New!</string>

    <string name="firstLevel">First Level</string>
    <string name="secondLevel">Second Level</string>
    <string name="thirdLevel">Third Level</string>
    <string name="forthLevel">Forth Level</string>

    <!--Skill names-->
    <string name="heal">Heal</string>
    <string name="lightning">Lightning</string>
    <string name="punch">Punch</string>
    <string name="move">Move</string>

    <!--Team selection-->
    <string name="startStage">Fight</string>

    <!--Game play-->
    <string name="playersTurn">Player\'s turn</string>
    <string name="computersTurn">Computer\'s turn</string>
    <string name="postGameCleared">Level Cleared!</string>
    <string name="postGameLose">Defeated :(</string>
    <string name="backButton">Back</string>

    <!--Post game dialogue-->

    <!--SettingsActivity-->
    <string name="music">Music</string>
    <string name="soundFx">Sound Fx</string>
    <string name="vibration">Vibration</string>
    <string name="left_handed">Left handed</string>
    <string name="left_handed_helper">Turn this off if you prefer to play left handed.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_level_select">LevelSelectActivity</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
</resources>
