<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="askim.eratactics.activities.LevelSelectActivity">

    <TextView
        android:id="@+id/level_select_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectStage"
        android:textSize="@dimen/activity_header_text"/>


    <!--TODO change button to some layout file that will show whether or not the stage has been cleared-->
    <Button
        android:id="@+id/firstLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstLevel"
        android:layout_below="@id/level_select_header"/>


    <Button
        android:id="@+id/secondLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondLevel"
        android:layout_below="@id/firstLevel"/>

    <Button
        android:id="@+id/thirdLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thirdLevel"
        android:layout_below="@id/secondLevel"/>


    <Button
        android:id="@+id/forthLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forthLevel"
        android:layout_below="@id/thirdLevel"/>


</RelativeLayout>
