<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutorial"
                android:textSize="@dimen/activity_header_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clickEquipment"
                android:textSize="@dimen/tutorial_h2"
                android:layout_marginTop="30dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/equipment_tutorial_1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longClickEquipment"
                android:textSize="@dimen/tutorial_h2"
                android:layout_marginTop="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipmentNote"
                android:textSize="@dimen/tutorial_h2"
                android:layout_marginTop="30dp"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_gravity="center"
                android:text="@string/playGame"
                android:textSize="@dimen/tutorial_h2"
                android:background="?android:selectableItemBackground"
                android:id="@+id/tutorialBackButton"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>