<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".activities.SplashActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textSize="50sp"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center"
            android:text="@string/adventure"
            android:textSize="30sp"
            android:background="?android:selectableItemBackground"
            android:id="@+id/adventureButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center"
            android:text="@string/members"
            android:textSize="30dp"
            android:background="?android:selectableItemBackground"
            android:id="@+id/membersButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center"
            android:text="@string/teams"
            android:textSize="30sp"
            android:background="?android:selectableItemBackground"
            android:id="@+id/teamsButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textSize="30sp"
            android:background="?android:selectableItemBackground"
            android:id="@+id/settingsButton"/>
    </LinearLayout>

</FrameLayout>
